--- a/BigData/Mapreduce/pom.xml
+++ b/BigData/Mapreduce/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>edu.csu.mm.mapreduce</groupId>
-	<artifactId>Mapreduce</artifactId>
+	<groupId>edu.csu.mm.hadoop</groupId>
+	<artifactId>HadoopDemo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<name>maven-mahout</name>
@@ -12,7 +12,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<hadoop.version>2.8.0</hadoop.version>
+		<hadoop.version>2.8.3</hadoop.version>
 	</properties>
 
 	<dependencies>
@@ -62,7 +62,7 @@
 						<phase>package</phase>
 						<goals>
 							<goal>shade</goal>
-						</goals>
+						</goals> 
 						<configuration>
 							<filters>
 								<filter>
@@ -91,6 +91,5 @@
 				</executions>
 			</plugin>
 		</plugins>
-
 	</build>
 </project>
